Sidebarchat gap- fix

--- a/src/Chat/Components/SideBarChat/SideBarChat.css
+++ b/src/Chat/Components/SideBarChat/SideBarChat.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     height: 5px;
+    width: 60px;
 }
 
 .sidebarchat .sidebarchat_time {
